--- a/app/src/main/res/drawable/button_login.xml
+++ b/app/src/main/res/drawable/button_login.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:centerColor="#fc699d"
-        android:endColor="#fa5692"
-        android:startColor="#fa5692" />
+        android:centerColor="#7e40fd"
+        android:endColor="#8366fe"
+        android:startColor="#8382ff" />
     <corners android:radius="24dp" />
 
 </shape>
