--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,9 +53,9 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             app:boxStrokeWidth="1dp"
-            app:passwordToggleEnabled="true"
-            android:layout_marginTop="8dp">
+            app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/edt_password"
@@ -71,13 +71,23 @@
                 android:maxLength="20" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:progressDrawable="@drawable/progress_bar_custom"
+            android:visibility="gone" />
+
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/selector_button_login"
             android:enabled="false"
-            android:text="Sign in" />
+            android:text="Sign in"
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -92,6 +102,16 @@
             android:layout_height="wrap_content"
             android:text="Register here." />
     </LinearLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:scaleType="centerCrop"
+        android:layout_width="180dp"
+        android:layout_height="140dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/login_animation" />
 
 
 </RelativeLayout>
