--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -85,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:id="@+id/til_username"
             app:boxStrokeWidth="1dp">
 
             <EditText
@@ -105,6 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:boxStrokeWidth="1dp"
+            android:id="@+id/til_password"
             app:passwordToggleEnabled="true">
 
             <EditText
@@ -125,6 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:boxStrokeWidth="1dp"
+            android:id="@+id/til_repeat_password"
             app:passwordToggleEnabled="true">
 
             <EditText
