--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_hint">#D8FFFFFF</color>
     <color name="hint">#BCBBBD</color>
-    <color name="pink">#fa5692</color>
     <color name="color_icon">#a9a8aa</color>
     <color name="orange">#ff9e69</color>
+    <color name="online">#42ffdf</color>
 
 </resources>
