--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="color_icon">#a9a8aa</color>
     <color name="orange">#ff9e69</color>
     <color name="online">#42ffdf</color>
+    <color name="blue">#3ccaf4</color>
 
 </resources>
