--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,6 +39,7 @@
             app:boxStrokeWidth="1dp">
 
             <EditText
+                android:digits="@string/digits"
                 android:id="@+id/edt_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
             app:passwordToggleEnabled="true">
 
             <EditText
+                android:digits="@string/digits"
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
