--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -77,7 +77,7 @@
                 android:drawablePadding="8dp"
                 android:hint="Fullname"
                 android:imeOptions="actionNext"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:maxLength="40" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,6 +89,7 @@
             app:boxStrokeWidth="1dp">
 
             <EditText
+                android:digits="@string/digits"
                 android:id="@+id/edt_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,6 +111,7 @@
             app:passwordToggleEnabled="true">
 
             <EditText
+                android:digits="@string/digits"
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -131,6 +133,7 @@
             app:passwordToggleEnabled="true">
 
             <EditText
+                android:digits="@string/digits"
                 android:id="@+id/edt_repeat_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
