--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Chat_app" parent="Theme.Material3.DayNight.NoActionBar">
-      <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="Theme.Chat_app" parent="Base.Theme.Chat_app" />
+
+
 </resources>
