--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.auth.SplashFragment">
+    tools:context=".ui.auth.splash.SplashFragment">
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="150dp"
