--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.main.SettingsFragment">
+    tools:context=".ui.main.settings.SettingsFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
