search and send mutiple image

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -31,7 +31,7 @@
             android:inputType="text"
             app:iconifiedByDefault="false"
             app:queryBackground="@android:color/transparent"
-            app:queryHint="Search by name or uid"
+            app:queryHint="Search friend"
             app:searchIcon="@null" />
     </LinearLayout>
 
