--- a/app/src/main/res/layout/reciver_layout.xml
+++ b/app/src/main/res/layout/reciver_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp"
     android:gravity="left"
     android:orientation="vertical"
@@ -9,12 +10,23 @@
 
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_mess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/reciver_shape"
         android:text="@string/app_name"
         android:textColor="@color/black" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv_image"
+        android:layout_margin="4dp"
+        android:visibility="gone"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layoutDirection="ltr"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2" />
 
     <TextView
         android:id="@+id/tv_time"
