--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,7 +16,16 @@
         android:orientation="horizontal"
         android:padding="12dp">
 
+        <ImageView
+            android:id="@+id/imv_back"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/icon_back"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerCrop" />
+
         <RelativeLayout
+            android:layout_marginStart="8dp"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:background="@color/white">
@@ -31,36 +40,42 @@
                     android:id="@+id/imv_avatar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop" />
+                    android:contentDescription="@string/todo"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ImageContrastCheck" />
             </androidx.cardview.widget.CardView>
 
             <ImageView
                 android:id="@+id/imv_online"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="10dp"
                 android:background="@drawable/online_shape"
-                android:translationZ="10dp" />
+                android:contentDescription="@string/todo"
+                android:translationZ="10dp"
+                tools:ignore="ImageContrastCheck" />
         </RelativeLayout>
 
         <TextView
             android:id="@+id/tv_fullname"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:textColor="@color/black"
-            android:textSize="16dp" />
+            android:textSize="20sp" />
 
         <ImageButton
             android:id="@+id/imv_more_vert"
-            android:background="@android:color/transparent"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/todo"
             android:padding="4dp"
-            android:src="@drawable/more_vert_24px" />
+            android:src="@drawable/more_vert_24px"
+            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
 
 
     </LinearLayout>
@@ -70,13 +85,20 @@
         android:layout_height="0.1dp"
         android:background="@color/hint" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_chat"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll_message"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="4dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:paddingBottom="16dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_chat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="4dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </androidx.core.widget.NestedScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,6 +113,7 @@
             android:scrollbars="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/image_layout" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -121,27 +144,33 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="8dp"
-                    android:text="Sending a message"
+                    android:text="@string/sending_a_message"
                     android:textColor="@color/white" />
             </RelativeLayout>
 
             <EditText
                 android:id="@+id/edt_text"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/editext_chat_shape"
-                android:hint="Enter message"
+                android:autofillHints=""
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
-                android:maxLines="4" />
+                android:hint="@string/enter_message"
+                android:maxLines="4"
+                android:minHeight="48dp"
+                android:textColorHint="#757575"
+                tools:ignore="VisualLintTextFieldSize" />
 
             <ImageView
                 android:id="@+id/imv_gallery"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/gallery" />
+                android:background="@drawable/gallery"
+                android:contentDescription="@string/todo"
+                tools:ignore="ImageContrastCheck" />
 
             <ImageView
                 android:id="@+id/imv_send"
@@ -149,6 +178,7 @@
                 android:layout_height="36dp"
                 android:layout_marginStart="16dp"
                 android:background="@drawable/send"
+                android:contentDescription="@string/todo"
                 android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
