--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/orange"
     tools:context=".ui.main.friends.FriendsFragment">
 
     <LinearLayout
@@ -40,8 +41,8 @@
         android:id="@+id/ln_invitation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/orange"
         android:gravity="center"
+        android:background="#00BFFF"
         android:orientation="horizontal"
         android:visibility="gone">
 
@@ -70,12 +71,45 @@
             android:src="@drawable/expand_all_24px" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/hint" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_invitation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/invitation_item" />
+
+
+    <LinearLayout
+        android:id="@+id/ln_not_friend"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@color/orange"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="44dp"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/not_friend_animation" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/adlam_display"
+            android:text="Let's make new friends now"
+            android:textSize="22sp" />
+    </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_friends"
