--- a/app/src/main/res/layout/reciver_layout.xml
+++ b/app/src/main/res/layout/reciver_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="8dp"
     android:gravity="left"
     android:orientation="vertical"
@@ -10,18 +11,19 @@
 
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_mess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/reciver_shape"
-        android:text="@string/app_name"
         android:textColor="@color/black" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:fitsSystemWindows="true"
+        android:nestedScrollingEnabled="false"
+        android:overScrollMode="never"
+        tools:listitem="@layout/message_image_layout"
         android:id="@+id/rcv_image"
         android:layout_margin="4dp"
-        android:visibility="gone"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layoutDirection="ltr"
@@ -33,7 +35,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/hint"
-        android:textSize="10dp"
-        android:visibility="gone" />
+        android:textSize="10dp" />
 
 </LinearLayout>
